[package]
name = "inputplumber"
version = "0.44.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Open source input manager for Linux"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/inputplumber", dest = "/usr/bin/inputplumber", mode = "755" },
  { source = "rootfs/usr/share/dbus-1/system.d/org.shadowblip.InputPlumber.conf", dest = "/usr/share/dbus-1/system.d/org.shadowblip.InputPlumber.conf", mode = "644" },
  { source = "rootfs/usr/lib/systemd/system/inputplumber.service", dest = "/usr/lib/systemd/system/inputplumber.service", mode = "644" },
  { source = "rootfs/usr/lib/systemd/system/inputplumber-suspend.service", dest = "/usr/lib/systemd/system/inputplumber-suspend.service", mode = "644" },
  { source = "rootfs/usr/share/inputplumber/devices/*.yaml", dest = "/usr/share/inputplumber/devices/", mode = "644" },
  { source = "rootfs/usr/share/inputplumber/schema/*.json", dest = "/usr/share/inputplumber/schema/", mode = "644" },
  { source = "rootfs/usr/share/inputplumber/capability_maps/*.yaml", dest = "/usr/share/inputplumber/capability_maps/", mode = "644" },
  { source = "rootfs/usr/share/inputplumber/profiles/*.yaml", dest = "/usr/share/inputplumber/profiles/", mode = "644" },
  { source = "rootfs/usr/lib/udev/hwdb.d/59-inputplumber.hwdb", dest = "/usr/lib/udev/hwdb.d/59-inputplumber.hwdb", mode = "644" },
]
auto-req = "no"

[package.metadata.generate-rpm.requires]
libiio = "*"
libevdev = "*"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
clap_complete = "4.5.42"
env_logger = "0.11.3"
evdev = { git = "https://github.com/emberian/evdev.git", features = [
  "tokio",
], rev = "42b58ee08508b7799322a13bf89121a1d29cf0a2" }
glob-match = "0.2.1"
hidapi = "2.6.1"
industrial-io = "0.5.2"
#evdev = { version = "0.12.1", features = ["tokio"] }
inotify = "0.10.2"
# Omit trace logging for release builds
log = { version = "0.4.22", features = [
  "max_level_trace",
  "release_max_level_debug",
] }
mio = { version = "0.8.11", features = ["os-poll", "os-ext", "net"] }
nix = { version = "0.29.0", features = ["fs"] }
packed_struct = "0.10.1"
procfs = "0.16.0"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
tabled = { version = "0.17.0", features = ["ansi"] }
thiserror = "1.0.61"
tokio = { version = "*", features = ["full"] }
udev = { version = "^0.8", features = ["mio"] }
uhid-virt = "0.0.7"
virtual-usb = { git = "https://github.com/ShadowBlip/virtual-usb-rs.git", rev = "4bca5c6fb9f2b63944a286854405e3e7e0b5d259" }
xdg = "2.5.2"
zbus = { version = "4.3.1", default-features = false, features = ["tokio"] }
zbus_macros = "4.3.1"

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 1
