[package]
name = "inputplumber"
version = "0.55.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Open source input manager for Linux"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/inputplumber", dest = "/usr/bin/inputplumber", mode = "755" },
  { source = "rootfs/usr/share/dbus-1/system.d/org.shadowblip.InputPlumber.conf", dest = "/usr/share/dbus-1/system.d/org.shadowblip.InputPlumber.conf", mode = "644" },
  { source = "rootfs/usr/lib/systemd/system/inputplumber.service", dest = "/usr/lib/systemd/system/inputplumber.service", mode = "644" },
  { source = "rootfs/usr/lib/systemd/system/inputplumber-suspend.service", dest = "/usr/lib/systemd/system/inputplumber-suspend.service", mode = "644" },
  { source = "rootfs/usr/share/inputplumber/devices/*.yaml", dest = "/usr/share/inputplumber/devices/", mode = "644" },
  { source = "rootfs/usr/share/inputplumber/schema/*.json", dest = "/usr/share/inputplumber/schema/", mode = "644" },
  { source = "rootfs/usr/share/inputplumber/capability_maps/*.yaml", dest = "/usr/share/inputplumber/capability_maps/", mode = "644" },
  { source = "rootfs/usr/share/inputplumber/profiles/*.yaml", dest = "/usr/share/inputplumber/profiles/", mode = "644" },
  { source = "rootfs/usr/lib/udev/hwdb.d/59-inputplumber.hwdb", dest = "/usr/lib/udev/hwdb.d/59-inputplumber.hwdb", mode = "644" },
]
auto-req = "no"

[package.metadata.generate-rpm.requires]
libiio = "*"
libevdev = "*"

[[bin]]
name = "generate"
path = "./src/generate.rs"

[dependencies]
clap = { version = "4.5.29", features = ["derive", "string"] }
clap_complete = "4.5.44"
env_logger = "0.11.6"
evdev = { git = "https://github.com/emberian/evdev.git", features = [
  "tokio",
], rev = "42b58ee08508b7799322a13bf89121a1d29cf0a2" }
futures = "0.3.31"
glob-match = "0.2.1"
hidapi = "2.6.3"
industrial-io = "0.6.0"
#evdev = { version = "0.12.1", features = ["tokio"] }
inotify = "0.11.0"
# Omit trace logging for release builds
log = { version = "0.4.25", features = [
  "max_level_trace",
  "release_max_level_debug",
] }
mio = { version = "1.0.3", features = ["os-poll", "os-ext", "net"] }
nix = { version = "0.29.0", features = ["fs"] }
packed_struct = "0.10.1"
procfs = "0.17.0"
rand = "0.9.0"
ratatui = "0.29.0"
schemars = "0.8.22"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tabled = { version = "0.18.0", features = ["ansi"] }
thiserror = "1.0.69"
tokio = { version = "1.43.0", features = ["full"] }
udev = { version = "0.9.3", features = ["mio"] }
uhid-virt = "0.0.8"
version-compare = "0.2.0"
virtual-usb = { git = "https://github.com/ShadowBlip/virtual-usb-rs.git", rev = "5c4c551a23b56f627a36d6775a5876c174be9eb3" }
xdg = "2.5.2"
zbus = { version = "5.5.0", default-features = false, features = ["tokio"] }
zbus_macros = "5.5.0"

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 1
